spade-tests/src/snapshots/spade_tests__ast_lowering__named_struct_patterns_errors_if_binding_to_undefined_name.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: No such argument: y
  ┌─ testinput:4:12
  │
4 │     let A$(y) = a;
  │            ^ No such argument


